--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy==1.21.1
-transformers==2.5.1
-pytorch-transformers==1.2.0
+numpy==1.19.1
+transformers==4.9.2
+torch==1.9.0
 jupyterlab==2.2.9
